Rename movies by animes

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 ANIME_CATALOG_SERVICE=http://localhost:8001/anime
 ALL_ANIME_CATALOG_SERVICE=http://localhost:8001/all_anime
-ALL_MOVIE_CATALOG_SERVICE=http://localhost:8001/all_manga
+ALL_ANIME_CATALOG_SERVICE=http://localhost:8001/all_manga
 
-MOVIE_SERVICE=http://localhost:8002/movie_info
+ANIME_SERVICE=http://localhost:8002/anime_info
 ANIME_SERVICE=http://localhost:8002/anime_info
 MANGA_SERVICE=http://localhost:8002/manga_info
 
