--- a/.env.docker.local
+++ b/.env.docker.local
@@ -1,7 +1,7 @@
 ANIME_CATALOG_SERVICE=http://service_2:8001/anime
 ALL_ANIME_CATALOG_SERVICE=http://service_2:8001/all_anime
-ALL_MOVIE_CATALOG_SERVICE=http://service_2:8001/all_manga
+ALL_ANIME_CATALOG_SERVICE=http://service_2:8001/all_manga
 
-MOVIE_SERVICE=http://service_3:8002/movie_info
+ANIME_SERVICE=http://service_3:8002/anime_info
 ANIME_SERVICE=http://service_3:8002/anime_info
 MANGA_SERVICE=http://service_3:8002/manga_info
